Chore: fix to page heading and dark mode default

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -358,7 +358,15 @@
 
 @layer base {
 	:root {
+		color-scheme: light dark;
+	}
+
+	html:not(.dark) {
 		color-scheme: light;
+	}
+
+	html.dark {
+		color-scheme: dark;
 	}
 
 	* {
